tests/expectations/compiler/dynamic_dispatch/dynamic_contains_wrong_arg_type_fail.out
Error [ETYC0372117]: Expected type `field` but type `u64` was found.
    --> compiler-test:9:42
     |
   9 |     let exists: bool = _dynamic_contains(prog, net, m, key);
     |                                          ^^^^
Error [ETYC0372117]: Expected type `field` but type `u64` was found.
    --> compiler-test:9:42
     |
   9 |     let exists: bool = _dynamic_contains(prog, net, m, key);
     |                                          ^^^^
